# blender-editorbar

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PREFERENCES_MONITORING.md  README.md  __init__.py  blender-extension.md  blender_manifest.toml  build.py  editorbar.py  pyproject.toml  pyrightconfig.json  release.py  ruff.toml  version_adapter.py  workspaces.py
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  CORE_FUNCTIONALITY.md  PREFERENCES.md  PREFERENCES_MONITORING.md  README.md  VERSION_FIXES.md
src/editorbar/: __init__.py  editorbar.py  version_adapter.py
